# nh-language-server

./: .eslintrc.yml  .gitignore  .vscodeignore  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts  webpack.config.js
client/: package.json  pnpm-lock.yaml
client/src/: extension.ts
server/: Cargo.toml
server/src/: base_game.json  base_game_entry_ids.rs  base_game_fact_ids.rs  file_paths.rs  main.rs  planets.rs  project.rs  ship_log.rs  systems.rs  utils.rs  validation.rs
server/src/test_files/: duplicate_ids.xml  missing_curiosity.xml  missing_source_id.xml  test_ship_log.xml
src/: extension.ts  ship_logs.html  types.d.ts
